fix: adjusting spacing between task contents

--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -1,5 +1,6 @@
 .task {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1.5rem 1fr 1.5rem;
   padding: 1rem;
   gap: .75rem;
   background-color: var(--gray-500);
